# VeloView

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.20  CMakeLists.txt.user.4.8-pre1  FindPythonQt.cmake  GDB_print_packet.gs  GDB_print_packet.ods  License.txt  README.md  branding.cmake  generateTestData.py  logo.icns  version.txt  versions.cmake  vvAboutDialog.ui  vvColorToolbar.cxx  vvColorToolbar.h  vvColorToolbar.ui  vvConfig.h.in  vvFilters.xml  vvLoadDataReaction.cxx  vvLoadDataReaction.h  vvMainWindow.cxx  vvMainWindow.h  vvMainWindow.ui  vvPlayerControlsController.cxx  vvPlayerControlsController.h  vvPlayerControlsToolbar.cxx  vvPlayerControlsToolbar.h  vvPlayerControlsToolbar.ui  vvReaders.xml  vvResources.qrc  vvSelectionReaction.cxx  vvSelectionReaction.h  vvToggleSpreadSheetReaction.cxx  vvToggleSpreadSheetReaction.h
Application/: CMakeLists.txt  branding.cmake  logo.icns  lvSpreadSheetManager.cxx  lvSpreadSheetManager.h  vvFilters.xml  vvMainWindow.cxx  vvMainWindow.h  vvMainWindow.ui  vvResources.qrc  vvSources.xml
Application/SoftwareInformation/: branding.cmake
Application/Ui/: CMakeLists.txt  lqLidarStreamColorByInitBehavior.cxx  lqLidarStreamColorByInitBehavior.h  lqOpenPcapReaction.cxx  lqOpenPcapReaction.h  lqOpenRecentFilesReaction.cxx  lqOpenRecentFilesReaction.h  lqOpenSensorReaction.cxx  lqOpenSensorReaction.h  lqUpdateCalibrationReaction.cxx  lqUpdateCalibrationReaction.h  pqLidarViewManager.cxx  pqLidarViewManager.h  vvLoadDataReaction.h  vvPythonQtDecorators.h
ApplicationComponents/: CMakeLists.txt  vvPlayerControlsController.cxx  vvPlayerControlsToolbar.ui
LidarPlugin/: CMakeLists.txt  plugin.cmake  pqLidarViewManager.cxx  pqVelodyneManager.cxx  pqVelodyneManager.h  vvConfigure.h  vvPythonQtDecorators.h  wrapped_methods.txt
LidarPlugin/Common/: BoundingBox.h  BoundingBox.txx  CameraProjection.cxx  CameraProjection.h  CeresCostFunctions.h  EnumMacros.h  statistics.h  vtkConversions.cxx  vtkConversions.h  vtkCustomTransformInterpolator.cxx  vtkCustomTransformInterpolator.h  vtkEigenTools.cxx  vtkEigenTools.h  vtkGeometricCalibration.cxx  vtkGeometricCalibration.h  vtkHelper.h  vtkOpenCVConversions.cxx  vtkPCLConversions.cxx  vtkPCLConversions.h  vtkTemporalTransforms.h  vtkTimeCalibration.h
LidarPlugin/IO/: FrameInformation.h  LASFileWriter.cxx  LASFileWriter.h  vtkBoundingBoxReader.cxx  vtkBoundingBoxReader.h  vtkLASFileWriter.cxx  vtkLASFileWriter.h  vtkTemporalTransformsReader.h  vtkTemporalTransformsWriter.cxx  vtkTemporalTransformsWriter.h
LidarPlugin/StandAloneTools/: BBoxFromImagesDetections.cxx  PCAPTester.cxx  SpecialVelarray_parser.lua  runPCAPTester.sh
LidarPlugin/Testing/: CMakeLists.txt  README.md  TestBoundingBox.cxx  TestCameraCalibration.cxx  TestCarGeometricCalibration-LaDoua.cxx  TestCarGeometricCalibration-MM.cxx  TestGeometricCalibration-LaDoua.cxx  TestGeometricCalibration-MM.cxx  TestHelpers.cxx  TestHelpers.h  TestLidarReader.cxx  TestLidarStream.cxx  TestMIDHOG.cxx  TestRansacPlaneModel.cxx  TestScaleCalibration-MM.cxx  TestSlam.cxx  TestTimeCalibration-LaDoua.cxx  TestTrailingFrame.cxx  TestTrajectoryReoptimization.cxx  TestVtkEigenTools.cxx  generateTestData.py.in
LidarPlugin/Ui/: vvCalibrationDialog.cxx  vvCalibrationDialog.h  vvCalibrationDialog.ui  vvCropReturnsDialog.cxx  vvCropReturnsDialog.h  vvLaserSelectionDialog.cxx  vvLaserSelectionDialog.h  vvSelectFramesDialog.cxx  vvSelectFramesDialog.h
LidarPlugin/ctk/: ctkDoubleRangeSlider.h  ctkRangeSlider.h  ctkValueProxy.cpp
LidarPlugin/python/: CMakeLists.txt
LidarPlugin/vtkPatch/: vtkCustomPiecewiseFunction.cxx  vtkCustomQuaternion.h  vtkCustomQuaternionInterpolator.cxx  vtkCustomTupleInterpolator.h
LidarPlugin/xml/: ArduPilotDataFlashLogReader.xml  BoundingBoxReader.xml  FishEyeProjector.xml  LASFileWriter.xml  Lidar.xml  LidarKITTIDataSetReader.xml  LidarRawSignalImage.xml  OpenCVVideoReader.xml  PointCloudLinearProjector.xml  Slam.xml  TemporalTransformsRemapper.xml  TemporalTransformsWriter.xml  TrailingFrame.xml  VelodyneHDLPositionReader.xml  VelodyneLidarAdvancedPacketInterpreter.xml  VelodyneLidarPacketInterpreter.xml  VelodyneSpecialVelarrayPacketInterpreter.xml
Plugins/: CMakeLists.txt
Plugins/LidarPlugin/: CMakeLists.txt  vvConfigure.h
Plugins/VelodynePlugin/: CMakeLists.txt  plugin.cmake
Plugins/VelodyneUIPlugin/: CMakeLists.txt  pqLidarViewManager.h  vvLoadDataReaction.h  vvPythonQtDecorators.h
Superbuild/: CMakeLists.txt  versions.cmake
Superbuild/CMake/: PVExternalProject.cmake  ParaViewModules.cmake
Superbuild/Projects/: boost.cmake  boost.use.system.cmake  ceres.cmake  eigen.cmake  flann.cmake  getdate.cmake  glog.cmake  liblas.cmake  lidarview.bundle.common.cmake  lidarview.cmake  opencv.cmake  paraview.cmake  pcap.system.cmake  pcap.use.system.cmake  pcl.cmake  png.cmake  python.cmake  python.use.system.cmake  pythonqt.cmake  qhull.cmake  qt.cmake  velodyneviewer.cmake  veloview.bundle.common.cmake  veloview.cmake  yaml.cmake  zlib.cmake
Superbuild/lidarview-common-superbuild/: CMakeLists.txt  Readme.md  versions.cmake
VelodyneHDL/: CMakeLists.txt  LidarPacketInterpreter.cxx  LidarPacketInterpreter.h  LidarPacketInterpretor.cxx  LidarPacketInterpretor.h  NetworkSource.h  PacketConsumer.cxx  PacketConsumer.h  PacketFileSender.cxx  PacketFileWriter.cxx  PacketFileWriter.h  PacketReceiver.cxx  PacketReceiver.h  SynchronizedQueue.h  VelodyneHDLReader.xml  VelodyneHDLReaderGUI.xml  VelodynePacketInterpreter.cxx  VelodynePacketInterpreter.h  VelodynePacketInterpretor.cxx  VelodynePacketInterpretor.h  WrapPythonQt.py  loadKittiReader.py  plugin.cmake  pqVelodyneHDLSource.h  pqVelodyneManager.cxx  pqVelodyneManager.h  run.sh  vtkApplanixPositionReader.cxx  vtkApplanixPositionReader.h  vtkBirdEyeViewSnap.cxx  vtkBirdEyeViewSnap.h  vtkDataPacket.h  vtkLASFileWriter.cxx  vtkLASFileWriter.h  vtkLidarProvider.cxx  vtkLidarProvider.h  vtkLidarProviderInternal.cxx  vtkLidarProviderInternal.h  vtkLidarReader.cxx  vtkLidarReader.h  (+70 more)
VelodyneHDL/Common/: CeresCostFunctions.h  (+14 more)
(+515 files in other folders)
